New view begun, setup changed to JDK/JFX 11.