@@ -1,10 +1,16 @@
-/*
- * This build file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java Library project to get you started.
- * For more details take a look at the Java Libraries chapter in the Gradle
- * user guide available at https://docs.gradle.org/4.3/userguide/java_library_plugin.html
- */
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
+    }
+}
+
+apply plugin: 'application'
+apply plugin: 'com.google.osdetector'
+
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os
 
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
@@ -25,5 +31,28 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+	
+	compile "org.openjfx:javafx-base:11:$platform"
+	compile "org.openjfx:javafx-graphics:11:$platform"
+	compile "org.openjfx:javafx-controls:11:$platform"
 }
 
+compileJava {
+	doFirst {
+		options.compilerArgs = [
+				'--module-path', classpath.asPath,
+				'--add-modules', 'javafx.controls'
+		]
+	}
+}
+
+run {
+	doFirst {
+		jvmArgs = [
+				'--module-path', classpath.asPath,
+				'--add-modules', 'javafx.controls'
+		]
+	}
+}
+
+mainClassName = 'org.rtefx.OTestRTEView'
